[package]
name = "json-feed-model"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Bryant Luk <code@bryantluk.com>"]
description = "JSON Feed model"
edition = "2021"
repository = "https://github.com/bluk/json-feed-model"
documentation = "https://docs.rs/json-feed-model"
readme = "README.md"
keywords = ["jsonfeed", "feed", "json", "serialization", "serde"]
categories = ["encoding", "no-std"]
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]

[dependencies]
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }

[features]
default = ["std"]

std = ["serde/std", "serde_json/std"]

alloc = ["serde/alloc", "serde_json/alloc"]